v1.1.0/modules/schema/pages/class/MSSAggregation.adoc
= `MSSAggregation`
:toclevels: 4


+++Metered Sub-System aggregation of MSS Zones.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:MSSAggregation`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`MSSAggregation`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<MeteredSubSystem,`MeteredSubSystem`>>
//| [[slots_table.MeteredSubSystem]]<<MeteredSubSystem,`MeteredSubSystem`>>
| 1..* +
xref::class/MeteredSubSystem.adoc[`MeteredSubSystem`]
| _n/a_
| _n/a_

| <<RTO,`RTO`>>
//| [[slots_table.RTO]]<<RTO,`RTO`>>
| 1 +
xref::class/RTO.adoc[`RTO`]
| _n/a_
| _n/a_

| <<costRecovery,`costRecovery`>>
//| [[slots_table.costRecovery]]<<costRecovery,`costRecovery`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++Charge for Emission Costs, Start Up Costs, or Minimum Load Costs.+++
| _n/a_

| <<grossSettlement,`grossSettlement`>>
//| [[slots_table.grossSettlement]]<<grossSettlement,`grossSettlement`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++MSS Load Following may select Net vs. Gross settlement.  Net Settlement requires the net Demand settled at the MSS LAP and...+++
| _n/a_

| <<ignoreLosses,`ignoreLosses`>>
//| [[slots_table.ignoreLosses]]<<ignoreLosses,`ignoreLosses`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++Provides an indication if losses are to be ignored for this zone. Also refered to as Exclude Marginal Losses.+++
| _n/a_

| <<ignoreMarginalLosses,`ignoreMarginalLosses`>>
//| [[slots_table.ignoreMarginalLosses]]<<ignoreMarginalLosses,`ignoreMarginalLosses`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++Provides an indication if marginal losses are to be ignored for this zone.+++
| _n/a_

| <<loadFollowing,`loadFollowing`>>
//| [[slots_table.loadFollowing]]<<loadFollowing,`loadFollowing`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++Indication that this particular MSSA participates in the Load Following function.+++
| _n/a_

| <<rucProcurement,`rucProcurement`>>
//| [[slots_table.rucProcurement]]<<rucProcurement,`rucProcurement`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++Indicates that RUC will be procured by the ISO or self provided.+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#costRecovery]
=== `costRecovery`
+++Charge for Emission Costs, Start Up Costs, or Minimum Load Costs.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MSSAggregation.costRecovery`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]


|===

////
[.text-left]
--
<<slots_table.costRecovery,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#grossSettlement]
=== `grossSettlement`
+++MSS Load Following may select Net vs. Gross settlement.  Net Settlement requires the net Demand settled at the MSS LAP and Net Supply needs to settle at the equivalent to the weighted average price of the MSS generation.  Gross load will be settled at the System LAP and the Gross supply will be settled at the LMP.  MSS Aggregation that elects gross settlement shall have to identify if its resources are Load Following or not.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MSSAggregation.grossSettlement`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]


|===

////
[.text-left]
--
<<slots_table.grossSettlement,&#10548;>>
--
////


//[discrete]
[#ignoreLosses]
=== `ignoreLosses`
+++Provides an indication if losses are to be ignored for this zone. Also refered to as Exclude Marginal Losses.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MSSAggregation.ignoreLosses`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]


|===

////
[.text-left]
--
<<slots_table.ignoreLosses,&#10548;>>
--
////


//[discrete]
[#ignoreMarginalLosses]
=== `ignoreMarginalLosses`
+++Provides an indication if marginal losses are to be ignored for this zone.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MSSAggregation.ignoreMarginalLosses`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]


|===

////
[.text-left]
--
<<slots_table.ignoreMarginalLosses,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#loadFollowing]
=== `loadFollowing`
+++Indication that this particular MSSA participates in the Load Following function.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MSSAggregation.loadFollowing`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]


|===

////
[.text-left]
--
<<slots_table.loadFollowing,&#10548;>>
--
////


//[discrete]
[#MeteredSubSystem]
=== `MeteredSubSystem`



[cols="h,4",width=65%]
|===
| URI
| `cim:MSSAggregation.MeteredSubSystem`
| Cardinality
| 1..*
| Type
| xref::class/MeteredSubSystem.adoc[`MeteredSubSystem`]


|===

////
[.text-left]
--
<<slots_table.MeteredSubSystem,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#RTO]
=== `RTO`



[cols="h,4",width=65%]
|===
| URI
| `cim:MSSAggregation.RTO`
| Cardinality
| 1
| Type
| xref::class/RTO.adoc[`RTO`]


|===

////
[.text-left]
--
<<slots_table.RTO,&#10548;>>
--
////


//[discrete]
[#rucProcurement]
=== `rucProcurement`
+++Indicates that RUC will be procured by the ISO or self provided.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MSSAggregation.rucProcurement`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]


|===

////
[.text-left]
--
<<slots_table.rucProcurement,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/MeteredSubSystem.adoc[`MeteredSubSystem`] | xref::class/MeteredSubSystem.adoc#MSSAggregation[`MSSAggregation`]



| xref::class/RTO.adoc[`RTO`] | xref::class/RTO.adoc#MSSAggregation[`MSSAggregation`]


|===

